<resources>
    <!--  Base  -->
    <string name="app_name">MarketApp</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="discount">Акции</string>
    <string name="account">Профиль</string>
    <string name="favorite">Избранное</string>
    <string name="dummy">Заглушка</string>
    <!--  Login  -->
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="number">Номер телефона</string>
    <string name="login">Войти</string>
    <string name="enter">Вход</string>
    <string name="text_before_conditions">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="conditions_of_the_loyalty"><u>условия программы лояльности</u></string>
    <!--  Main  -->
    <!--  Catalog  -->
    <string name="price_with_discount">899 ₽</string>
    <string name="price">549 ₽</string>
    <string name="discount_percent">-39%</string>
    <string name="brand">Бренд</string>
    <string name="title">Заголовок</string>
    <string name="rating_count">0.0</string>
    <string name="reviews_count">(0)</string>
        <!--  Sort list  -->
        <string name="by_popularity">По популярности</string>
        <string name="by_price_descend">По уменьшению цены</string>
        <string name="by_price_ascend">По возрастанию цены</string>
    <!-- Tag list  -->
        <string name="all">Смотреть все</string>
        <string name="face">Лицо</string>
        <string name="body">Тело</string>
        <string name="suntan">Загар</string>
        <string name="mask">Массаж</string>
    <string name="filter">Фильтры</string>
    <string name="tag">Тэг</string>
    <string name="subtitle">Подзаголовок</string>
    <!--  Product  -->
    <string name="available">Доступно для заказа</string>
    <plurals name="available_plurals">
        <item quantity="zero">штук</item>
        <item quantity="one">штука</item>
        <item quantity="two">штуки</item>
        <item quantity="few">штуки</item>
        <item quantity="many">штук</item>
        <item quantity="other">штук</item>
    </plurals>
    <string name="reviews_count_text">0 отзывов</string>
    <string name="description">Описание</string>
    <string name="info">Характеристики</string>
    <string name="ingredients">Состав</string>
    <string name="more_details">Подробнее</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="hide">Скрыть</string>
    <plurals name="feedback_plurals">
        <item quantity="zero">отзыв</item>
        <item quantity="one">отзыв</item>
        <item quantity="two">отзыва</item>
        <item quantity="few">отзыва</item>
        <item quantity="many">отзывов</item>
        <item quantity="other">отзывов</item>
    </plurals>
    <string name="dot">dot</string>
    <string name="question">question</string>
    <string name="heart">heart</string>
    <string name="copy">copy</string>
    <!--  Account  -->
    <string name="offer">Оферта</string>
    <string name="purchase_returns">Возврат товара</string>
    <string name="exit">Выйти</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="markets">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="invalid_char">Некорректный символ</string>
    <!--  Favorite  -->
    <plurals name="favorite_plurals">
        <item quantity="zero">товар</item>
        <item quantity="one">товар</item>
        <item quantity="two">товара</item>
        <item quantity="few">товара</item>
        <item quantity="many">товаров</item>
        <item quantity="other">товаров</item>
    </plurals>

</resources>