<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main"
        android:title="@string/main"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/catalog"
        android:title="@string/catalog"
        android:icon="@drawable/ic_catalog"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/basket"
        android:title="@string/basket"
        android:icon="@drawable/ic_basket"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/discount"
        android:title="@string/discount"
        android:icon="@drawable/ic_discount"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom"/>
</menu>