<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.product.ProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_padding_top_medium">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="368dp"
            android:scaleType="centerCrop"
            app:iss_selected_dot="@drawable/ic_dot_small_active"
            app:iss_unselected_dot="@drawable/ic_dot_small_inactive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toTopOf="@+id/itemImage"
            app:srcCompat="@drawable/ic_heart_empty"
            android:contentDescription="@string/heart" />

        <ImageView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding_small"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/itemImage"
            app:layout_constraintStart_toStartOf="@+id/itemImage"
            app:srcCompat="@drawable/ic_question"
            android:contentDescription="@string/question" />

        <TextView
            android:id="@+id/title"
            style="@style/BaseText.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@+id/itemImage"
            app:layout_constraintTop_toBottomOf="@+id/itemImage" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/BaseText.LargeTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:text="@string/subtitle"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/available"
            style="@style/BaseText.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:text="@string/available"
            app:layout_constraintStart_toStartOf="@+id/subtitle"
            app:layout_constraintTop_toBottomOf="@+id/subtitle" />

        <View
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/base_padding_small"
            android:background="@drawable/bg_button_on"
            android:backgroundTint="@color/bg_light_grey"
            app:layout_constraintStart_toStartOf="@+id/available"
            app:layout_constraintTop_toBottomOf="@+id/available"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/feedback_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="rating_bar, reviews, dot, reviews_count"
            android:visibility="visible"/>

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:numStars="5"
            android:clickable="false"
            android:rating="4.3"
            android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="@+id/space"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <TextView
            android:id="@+id/reviews"
            style="@style/BaseText.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_padding_small"
            android:text="@string/rating_count"
            app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintTop_toTopOf="@+id/rating_bar" />

        <ImageView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_padding_small"
            android:src="@drawable/ic_dot"
            app:layout_constraintBottom_toBottomOf="@+id/reviews"
            app:layout_constraintStart_toEndOf="@+id/reviews"
            app:layout_constraintTop_toTopOf="@+id/reviews"
            android:contentDescription="@string/dot" />

        <TextView
            android:id="@+id/reviews_count"
            style="@style/BaseText.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_count_text"
            app:layout_constraintBottom_toBottomOf="@+id/dot"
            app:layout_constraintStart_toEndOf="@+id/dot"
            app:layout_constraintTop_toTopOf="@+id/dot" />

        <TextView
            android:id="@+id/price_with_discount"
            style="@style/BaseText.LargeTitle1"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:text="@string/price_with_discount"
            app:layout_constraintStart_toStartOf="@+id/rating_bar"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

        <com.ighorosipov.marketapp.presentation.custom.StrikeTextView
            android:id="@+id/price"
            style="@style/BaseText.Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_padding_small"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@+id/price_with_discount"
            app:layout_constraintStart_toEndOf="@+id/price_with_discount"
            app:layout_constraintTop_toTopOf="@+id/price_with_discount" />

        <TextView
            android:id="@+id/discount"
            style="@style/BaseText.ElementalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_padding_small"
            android:background="@drawable/bg_button_on"
            android:paddingVertical="3dp"
            android:paddingHorizontal="@dimen/base_padding_small"
            android:text="@string/discount_percent"
            app:layout_constraintBottom_toBottomOf="@+id/price"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toTopOf="@+id/price" />

        <TextView
            android:id="@+id/description_hc"
            style="@style/BaseText.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:textColor="@color/text_black"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/price_with_discount"
            app:layout_constraintTop_toBottomOf="@+id/price_with_discount" />

        <com.ighorosipov.marketapp.presentation.custom.MarketButton
            android:id="@+id/button_brand"
            style="@style/TrueMaterialButton.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_top_medium"
            app:title="@string/title"
            app:rightIcon="@drawable/ic_arrow_right"
            app:rightIconSize="32dp"
            app:layout_constraintEnd_toEndOf="@+id/description_hc"
            app:layout_constraintStart_toStartOf="@+id/description_hc"
            app:layout_constraintTop_toBottomOf="@+id/description_hc" />

        <TextView
            android:id="@+id/description"
            style="@style/BaseText.Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:text="@string/description"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="@+id/button_brand"
            app:layout_constraintTop_toBottomOf="@+id/button_brand" />

        <FrameLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <TextView
                android:id="@+id/description_hide"
                style="@style/BaseText.ButtonText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hide" />

            <TextView
                android:id="@+id/description_details"
                style="@style/BaseText.ButtonText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/more_details" />

        </FrameLayout>

        <TextView
            android:id="@+id/info_hc"
            style="@style/BaseText.Title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/text_black"
            android:text="@string/info"
            app:layout_constraintStart_toStartOf="@+id/description_layout"
            app:layout_constraintTop_toBottomOf="@+id/description_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="@+id/info_hc"
            app:layout_constraintTop_toBottomOf="@+id/info_hc"
            tools:listitem="@layout/item_info"/>

        <TextView
            android:id="@+id/ingredients_hc"
            style="@style/BaseText.Title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ingredients"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toStartOf="@+id/ingredients_copy"
            app:layout_constraintStart_toStartOf="@+id/info"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <ImageView
            android:id="@+id/ingredients_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="@+id/ingredients_hc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ingredients_hc"
            android:contentDescription="@string/copy" />

        <TextView
            android:id="@+id/ingredients"
            style="@style/BaseText.Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            android:textColor="@color/text_black"
            android:text="@string/ingredients"
            app:layout_constraintStart_toStartOf="@+id/ingredients_hc"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_hc" />

        <FrameLayout
            android:id="@+id/ingredients_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_padding_small"
            app:layout_constraintStart_toStartOf="@+id/ingredients"
            app:layout_constraintTop_toBottomOf="@+id/ingredients">

            <TextView
                android:id="@+id/ingredients_details"
                style="@style/BaseText.ButtonText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_details" />

            <TextView
                android:id="@+id/ingredients_hide"
                style="@style/BaseText.ButtonText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/hide" />

        </FrameLayout>

        <com.ighorosipov.marketapp.presentation.custom.MarketButton
            android:id="@+id/button_add"
            style="@style/TrueMaterialButton.Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/base_padding_top_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ingredients_layout"
            app:layout_constraintStart_toStartOf="@+id/ingredients_layout"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_layout"
            app:subtitle="@string/add_to_basket"
            app:title="@string/price"
            app:titleStrike="@string/price_with_discount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView >